--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "with-apollo",
-  "version": "2.0.0",
+  "private": true,
+  "name": "next-with-gqless-example",
+  "version": "1.0.0",
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "generate": "gqless generate"
   },
   "dependencies": {
     "@apollo/react-hooks": "3.1.3",
     "@apollo/react-ssr": "3.1.3",
+    "@gqless/react": "^0.0.1-alpha.28",
     "apollo-cache-inmemory": "1.6.5",
     "apollo-client": "2.6.8",
     "apollo-link-http": "1.5.16",
+    "gqless": "^0.0.1-alpha.29",
     "graphql": "^14.0.2",
     "graphql-tag": "2.10.3",
     "isomorphic-unfetch": "^3.0.0",
     "next": "latest",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-ssr-prepass": "^1.1.2"
   },
-  "license": "ISC",
   "devDependencies": {
-    "babel-plugin-graphql-tag": "^2.5.0"
+    "@gqless/cli": "^0.0.1-alpha.31",
+    "@types/react": "^16.9.32",
+    "babel-plugin-graphql-tag": "^2.5.0",
+    "typescript": "^3.8.3"
   }
 }
