--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-markdown": "^4.3.1",
     "react-ssr-prepass": "^1.1.2"
   },
   "devDependencies": {
     "@gqless/cli": "^0.0.1-alpha.31",
     "@types/react": "^16.9.32",
     "babel-plugin-graphql-tag": "^2.5.0",
+    "raw-loader": "^4.0.0",
     "typescript": "^3.8.3"
   }
 }
