--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-markdown": "^4.3.1",
-    "react-ssr-prepass": "^1.1.2"
+    "@zen_flow/react-ssr-prepass": "1.1.2-next-with-gqless-example-2"
   },
   "devDependencies": {
     "@gqless/cli": "^0.0.1-alpha.31",
